@@ -1,4 +1,8 @@
-﻿drkns 01.11.2015 18:59:48 +0200 - build 4452
+﻿drkns 01.11.2015 19:04:35 +0200 - build 4453
+
+1. Рефакторинг, предупреждения VS15 и прочие мелочи.
+
+drkns 01.11.2015 18:59:48 +0200 - build 4452
 
 1. Задел на будущее: разломаем FindFiles на два отдельных класса: интерфейс и непосредственно поиск.
 
